# qqr

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: stale.yml
data/deepresearch/: README.md  test.jsonl  train.jsonl
data/travel/: README.md  train.jsonl
data/travel/test/: compare_itinerary.jsonl  direction.jsonl  multi_day_travel.jsonl  one_day_travel.jsonl  search_around.jsonl
qqr/: __init__.py
qqr/data/: markdown.py  text.py
qqr/data/prompts/: qwen3.py
qqr/examples/deepresearch/: config.py  reward_model.py  rollout.py
qqr/examples/travel/: config.py  reward_model.py  rollout.py
qqr/mcp/: __init__.py  server.py  utils.py
qqr/reward_models/: __init__.py  anchor.py  double_elimination.py  round_robin.py  single_elimination.py  swiss.py  utils.py
qqr/rollout/: agent_rollout.py
qqr/schemas/: __init__.py  llm_judge.py  reward_model.py  sample.py
qqr/tools/amap/: server.py
qqr/tools/google_maps/: server.py
qqr/tools/mock_transport/: server.py
qqr/tools/web_search/: server.py
qqr/utils/: envs.py  paths.py  register.py  retry.py
scripts/deepresearch/: run-qwen3-8B.sh
scripts/travel/: run-qwen3-8B.sh
